hello.out
HOLIS A TODOS
HOLIS A TODOS
HOLIS A TODOS
HOLIS A TODOS
HOLIS A TODOS
termine
HOLIS A TODOS
HOLIS A TODOS
HOLIS A TODOS
HOLIS A TODOS
HOLIS A TODOS
termine
HOLIS A TODOS
HOLIS A TODOS
HOLIS A TODOS
HOLIS A TODOS
HOLIS A TODOS
termine
  File "helloworld.py", line 8
    i = i +1a
            ^
SyntaxError: invalid syntax
  File "/home/pi/Desktop/helloworld.py", line 8
    i = i +1a
            ^
SyntaxError: invalid syntax
HOLIS A TODOS
Acabe de saludar
HOLIS A TODOS
Acabe de saludar
HOLIS A TODOS
Acabe de saludar
HOLIS A TODOS
Acabe de saludar
HOLIS A TODOS
Acabe de saludar
HOLIS A TODOS
Acabe de saludar
HOLIS A TODOS
Acabe de saludar
HOLIS A TODOS
Acabe de saludar
